--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,8 @@ body {
     width: 100vw;
     height: fit-content;
     min-height: 100vh;
+
+    font-family: "Antonio", sans-serif;
 }
 
 .hidden {
@@ -20,6 +22,7 @@ header {
     padding: 31px;
 
     position: fixed;
+    z-index: 10;
 
     background-color: black;
 
@@ -50,11 +53,14 @@ header {
 
                 a {
                     width: 100%;
+                    height: 100%;
 
                     color: white;
                     text-decoration: none;
 
-                    text-align: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
 
                     font-size: $step-2;
                 }
@@ -83,19 +89,127 @@ main {
     width: 100%;
     height: fit-content;
     min-height: 100vh;
+
+    // display: flex;
+    // flex-direction: column;
+    
+    position: relative;
+
+    .transition {
+        width: 100%;
+        height: 100%;
+
+        background-color: black;
+        background-image: url(../assets/images/keb-logo.svg);
+        background-repeat: no-repeat;
+        background-position-y: center;
+
+        position: absolute;
+    }
+
+    .burger {
+        width: fit-content;
+        height: fit-content;
+
+        position: fixed;
+        margin-top: 31px;
+        margin-left: 31px;
+
+        background-color: #000000;
+        border: #000000 5px solid;
+
+        img {
+            vertical-align: middle; //ChatGPT
+        }
+    }
     
     .intro {
         width: 100%;
-        height: 100%;
+        height: 100vh;
 
         padding: 31px;
 
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
+        align-items: center;
 
         .title {
             margin: 0;
+
+            color: white;
+
+            font-size: $step-3;
+            font-family: "Black Ops One", system-ui;
         }
+
+        &__background {
+            background-image: url(../assets/images/keb-logo.svg);
+            background-repeat: no-repeat;
+
+            width: 100%;
+            height: 500px;
+
+            background-position: center;
+        }
+    }
+
+   .keb__section {
+        min-height: 100vh;
+    }
+
+    .sectionHeader {
+        width: 100%;
+        height: fit-content;
+        padding: 31px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: #EED61F;
+
+        margin-bottom: 62px;
+    }
+
+    .subtitle {
+        font-size: $step-3;
+        font-family: "Black Ops One", system-ui;
+        color: black;
+
+        margin: 0;
+    }
+
+    .explaination {
+        width: 100%;
+        padding: 0px 31px 31px 31px;
+
+        .paragraph:last-child {
+            margin-bottom: 0;
+        }
+
+        span {
+            width: 100%;
+            display: block;
+            text-align: center;
+
+            font-size: $step-2;
+        }
+    }
+
+    .paragraph {
+        margin-top: 0;
+        margin-bottom: 31px;
+
+        font-size: $step-1;
+        line-height: 140%;
+    }
+
+    .theydont__header {
+        margin-bottom: 31px;
+    }
+
+    .subsubtitle {
+        font-size: $step-2;
     }
 }
