Assets, HTML, CSS, JS, JSON
Assets: more images + edited names for images

JSON: added a JSON for "Your Role" section

HTML: remove span

CSS: Style for the "OIur Fight" slider

JS: Code for "Our Fight" slider (ScrollTrigger)

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,6 +10,8 @@ body {
     min-height: 100vh;
 
     font-family: "Antonio", sans-serif;
+
+    overflow-x: hidden;
 }
 
 .hidden {
@@ -207,9 +209,26 @@ main {
 
     .theydont__header {
         margin-bottom: 31px;
+        z-index: 10;
+    }
+
+    img {
+        width: 100%;
     }
 
     .subsubtitle {
         font-size: $step-2;
+    }
+
+    .theydont__div {
+        margin-bottom: 62px;
+
+        h4 {
+            font-size: $step-2;
+            text-align: center;
+            margin-bottom: 31px;
+
+            margin-top: 0;
+        }
     }
 }
